-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1, 10.2, 10.3, 10.4, 10.0
-
Fix Version/s: 10.4.0
-
Component/s: Data types, Temporal Types
-
Labels:None
SET sql_mode='NO_ZERO_DATE,NO_ZERO_IN_DATE'; |
SELECT
|
LEAST('0000-00-00',DATE'2001-01-01') AS c0, |
CAST(LEAST('0000-00-00',DATE'2001-01-01') AS CHAR) AS string, |
CAST(LEAST('0000-00-00',DATE'2001-01-01') AS DATE) AS date, |
CAST(LEAST('0000-00-00',DATE'2001-01-01') AS DATETIME) AS datetime, |
CAST(LEAST('0000-00-00',DATE'2001-01-01') AS TIME) AS time, |
CAST(LEAST('0000-00-00',DATE'2001-01-01') AS DECIMAL) AS dc, |
CAST(LEAST('0000-00-00',DATE'2001-01-01') AS DOUBLE) AS dbl, |
CAST(LEAST('0000-00-00',DATE'2001-01-01') AS SIGNED) AS sint, |
CAST(LEAST('0000-00-00',DATE'2001-01-01') AS UNSIGNED) AS uint; |
*************************** 1. row ***************************
|
c0: NULL
|
string: NULL
|
date: NULL
|
datetime: NULL
|
time: 00:00:00
|
dc: 0
|
dbl: 0
|
sint: 0
|
uint: 0
|
The expected result is to return NULL for all columns.
- blocks
-
MDEV-17317 Add THD* parameter into Item::get_date() and stricter data type control to "fuzzydate"
-
- Closed
-
- relates to
-
MDEV-17330 Wrong result for 0 + LEAST(TIME'-10:00:00',TIME'10:00:00')
-
- Closed
-
-
MDEV-16991 Rounding vs truncation for TIME, DATETIME, TIMESTAMP
-
- Closed
-
-
MDEV-17329 Inconsistency of NULL date value conversion to zero date in comparison context
-
- Open
-